--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -1,1 +1,60 @@
-/* You CSS goes in here */
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 20px 30px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav span {
+    font-size: x-large;
+    position: relative;
+    left: 0;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 30px;
+  }
+
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04aa6d;
+    color: white;
+  }
+
+  #chart_div {
+    width: 100vw;
+    height: 80vh;
+  }
+
+  #table_div {
+    display: none;
+    font-size: x-large;
+    margin: 5px;
+    height: 80vh;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
