--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -9,19 +9,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-  }
+}
 
-  /* Style the links inside the navigation bar */
-  .topnav a {
+/* Style the links inside the navigation bar */
+.topnav a {
     float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 20px 30px;
     text-decoration: none;
     font-size: 17px;
-  }
+}
 
-  .topnav span {
+.topnav span {
     font-size: x-large;
     position: relative;
     left: 0;
@@ -29,33 +29,33 @@
     color: #f2f2f2;
     text-align: center;
     padding: 14px 30px;
-  }
+}
 
-  /* Change the color of links on hover */
-  .topnav a:hover {
+/* Change the color of links on hover */
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
+}
 
-  /* Add a color to the active/current link */
-  .topnav a.active {
+/* Add a color to the active/current link */
+.topnav a.active {
     background-color: #04aa6d;
     color: white;
-  }
+}
 
-  #chart_div {
+#chart_div {
     width: 100vw;
     height: 80vh;
-  }
+}
 
-  #table_div {
+#table_div {
     display: none;
     font-size: large;
     margin: 5px;
     height: 80vh;
-  }
+}
 
-  body {
+body {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,18 +63,19 @@
     /* background-image: url(../images/img2.jpg);
     background-repeat: repeat; */
     background-color: #f4f4f4;
-  }
-  .form-control {
+}
+
+.form-control {
     font-family: 'Exo', sans-serif;
-  }
+}
 
 
-  label {
+label {
     color: #ddd;
     font-family: 'Exo', sans-serif;
-  }
+}
 
-  .styled-table {
+.styled-table {
     /* border-collapse: collapse; */
     /* border-radius: 25px; */
     /* border: 1px solid black; */
@@ -128,12 +129,12 @@ td {
     background-color: #FCFCFD;
     border-radius: 4px;
     border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     box-sizing: border-box;
     color: #36395A;
     cursor: pointer;
     display: inline-flex;
-    font-family: "JetBrains Mono",monospace;
+    font-family: "JetBrains Mono", monospace;
     height: 48px;
     justify-content: center;
     line-height: 1;
@@ -144,25 +145,43 @@ td {
     position: relative;
     text-align: left;
     text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
+    transition: box-shadow .15s, transform .15s;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
     white-space: nowrap;
-    will-change: box-shadow,transform;
+    will-change: box-shadow, transform;
     font-size: 18px;
-  }
-  
-  .button-30:focus {
+}
+
+.button-30:focus {
     box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  }
-  
-  .button-30:hover {
+}
+
+.button-30:hover {
     box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
     transform: translateY(-2px);
-  }
-  
-  .button-30:active {
+}
+
+.button-30:active {
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
-  }
+}
+
+
+.vert_bar {
+    width: 100%;
+    height: 20px;
+    border-top: 3px solid #37474F;
+    text-align: center;
+    border-radius: 16px;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.sim_history_title {
+    font-size: 20px;
+    background-color: #F3F5F6;
+    padding: 0 10px;
+    font-family: 'Rokkitt', serif;
+}
